--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 # используем язык java. Travic CI поддерживает другие языки тоже.
 language: java
+
+jdk: openjdk11
+
 # используем режим обычного пользователя для сборки проекта.
 sudo: false
 
